--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install conda
+        conda env create --file django-env.yml
     - name: Run Tests
       run: |
         python manage.py test
